v1-legacy/vpc.tf
resource "aws_vpc" "default" {
  cidr_block           = "${var.vpc_cidr}"
  enable_dns_hostnames = true

  tags {
    Name = "${var.project_name}-${terraform.workspace}"
  }
}
